--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "start:dev": "cross-env NODE_ENV=local nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:test": "cross-env NODE_ENV=test nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json" 
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
